--- a/QuanLyMayBay/QuanLyMayBay/QuanLyMayBay.csproj
+++ b/QuanLyMayBay/QuanLyMayBay/QuanLyMayBay.csproj
@@ -370,6 +370,9 @@
     <Content Include="Views\User\XemTheLenMayBay.cshtml" />
     <Content Include="Views\Admin\SuaNhanVien.cshtml" />
     <Content Include="Views\Admin\BaoCaoPDF.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\User\DemoVNPay.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
