--- a/QuanLyMayBay/QuanLyMayBay/Web.config
+++ b/QuanLyMayBay/QuanLyMayBay/Web.config
@@ -78,7 +78,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="QUANLYMAYBAYEntities" connectionString="metadata=res://*/QLMAYBAY.csdl|res://*/QLMAYBAY.ssdl|res://*/QLMAYBAY.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI;initial catalog=QUANLYMAYBAY;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QUANLYMAYBAYEntities" connectionString="metadata=res://*/QLMAYBAY.csdl|res://*/QLMAYBAY.ssdl|res://*/QLMAYBAY.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MSI\SQLEXPRESS;initial catalog=QUANLYMAYBAY;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
